cortex to hydradb
